# force-pulse

./: LICENSE  README.md
fprs/: Cargo.toml  add_team.sh  app.db  champ.sh  champs.sh  dpm.sh  game.sh  kda.sh  matchups.sh  overall.sh  player.sh  playground.sh  roles.sh  teammates.sh  teams.sh
fprs/manual_data/: OC1-684959682.json  binc_mscpbtc_1.json  binc_mscpbtc_2.json  binc_mscpbtc_3.json  jb_ss_1.json  jb_ss_2.json  jb_sss_1.json  jb_sss_2.json  jb_sss_3.json  lt_el_1.json  lt_el_2.json  lt_nk_2.json  lt_nk_3.json  plnt_pof_1.json  plnt_pof_2.json  plnt_pof_3.json  template.json
fprs/src/: app.rs  command.rs  db.rs  main.rs  riot.rs  ui.rs  update.rs
fprs/src/sql/: repo.rs  schema.rs
fprs/src/sql/queries/: all_champs.sql  champion_history.sql  champion_role.sql  overall.sql  players.sql  players_champs.sql  players_overall.sql  players_role.sql
fprs/src/ui/: lolui.rs  mod.rs  view.rs
scripts/: tourney.mjs
