[package]
name = "fprs"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
ratatui = "*"
crossterm = "*"
color-eyre = "0.6.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tui-input = "*"
chrono = "0.4"
unicode-width = "*"
pad = "*"
strum = "*"
